--- a/stylepage.css
+++ b/stylepage.css
@@ -10,7 +10,8 @@ header{
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-
+    position: fixed;
+   overflow: hidden;
 }
 #Logo{
     position: relative;
@@ -22,6 +23,7 @@ body{
     text-decoration: none;
     background-color: rgb(255, 255, 255);
     font-family: Inter, Arial, sans-serif;
+    overflow-x: hidden;
 }
 
 .AccueilBox{
@@ -118,4 +120,25 @@ body{
 }
 .ContactBox:hover{
   transform: scale(1.2);
+}
+.NewsBox{
+  display: flex;
+
+  justify-content: space-evenly;
+
+}
+footer{
+      background-color: #121212;
+    height: 70px;
+    width: 100%;
+    background-size: cover;
+    margin: 0;
+    align-content: center;
+    border-bottom: 5px black solid;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    position: fixed;
+   overflow: hidden;
 }
