--- a/stylepage.css
+++ b/stylepage.css
@@ -12,10 +12,17 @@ header{
     align-items: center;
     position: fixed;
    overflow: hidden;
+   z-index: 999;
+
 }
+
+main{
+  padding-top: 90px;
+}
+
 #Logo{
     position: relative;
-    top: px;
+    top: 0px;
 }
 
 body{
@@ -129,16 +136,103 @@ body{
 }
 footer{
       background-color: #121212;
-    height: 70px;
+    height: 250px;
     width: 100%;
-    background-size: cover;
-    margin: 0;
-    align-content: center;
-    border-bottom: 5px black solid;
     display: flex;
-    flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    position: fixed;
-   overflow: hidden;
+    position: relative;
+   z-index: 999;
+}
+.VideoBox {
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.VideoBox video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -2;
+}
+
+.DegraderBox {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 300px;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0.7),
+    rgba(0, 0, 0, 1));
+  z-index: -1;
+}
+
+.NewsTitle {
+  position: absolute;
+  bottom: 60px;
+  left: 40px;
+  color: rgb(255, 255, 255);
+  z-index: 2;
+}
+
+.NewsTitle h1 {
+  font-size: 40px;
+  margin: 0;
+}
+
+.NewsTitle hr {
+  width: 200px;
+  border: 2px solid rgb(255, 255, 255);
+}
+
+.NewsSection {
+  position: relative;
+  background: white;
+  padding-top: 100px;
+  z-index: 3;
+}
+
+.NewsBox {
+  display: flex;
+  justify-content: space-evenly;
+  padding-bottom: 100px;
+}
+.LogoDegrader{
+  position: absolute;
+  bottom: 12px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 2;
+}
+
+.LogoDegrader img {
+  width: 200px; 
+  filter: drop-shadow(0 0 10px black);
+}
+.FooterBox{
+  display: flex;
+  height: 100px;
+  border-left: 1px solid darkgrey;
+  padding-left: 50px;
+  padding-top: 10px;
+  position: absolute;
+}
+
+.EquipeStyle{
+  margin-left: 150px;
+}
+.Formation h1{
+font-size: 40px;
+font-weight: 900;
+padding-top: 10px;
+}
+.Formation hr{
+  width: 200px;
+  
+  border: 2px solid rgb(0, 0, 0);
 }
