--- a/stylepage.css
+++ b/stylepage.css
@@ -1,6 +1,166 @@
+
+@media (max-width: 768px )  {
+
+  header {
+    display: grid !important;
+     grid-template-columns: repeat(3, 1fr) !important;
+    flex-wrap: wrap;
+    height: auto;
+    padding: 10px ;
+    justify-content: space-evenly !important;
+    position: relative !important;
+    width: 97% !important;
+    gap: 10px;
+    justify-items: center;
+  
+  }
+
+  .Logo {
+    display: none;
+  }
+
+  .canadientitel {
+    grid-column: 1/-1;
+    display: flex !important;
+    font-size: 24px !important;
+    left: 0;
+    text-align: center !important;
+    justify-self: center !important;
+    width: 100 !important;
+    margin-bottom: 10px;
+    margin-top: 1px;
+    border-bottom: 2px white solid;
+    margin: 10px;
+  }
+
+  header a {
+    width: 90px;
+    height: 30px;
+    font-size: 12px;
+    margin: 3px;
+  }
+
+  .ContactBox {
+    margin-right: 0 !important;
+  }
+
+  main {
+    padding-top: 140px;
+    max-height: 1700px;
+  }
+
+  .VideoBox {
+    height: 70vh;
+  }
+
+  .DegraderBox {
+    height: 200px;
+  }
+
+  .NewsTitle h1 {
+    font-size: 26px;
+  }
+
+  .NewsTitle hr {
+    width: 120px;
+  }
+
+  .LogoDegrader img {
+    width: 120px !important;
+    justify-self: center !important;
+      position: absolute;
+     bottom: -8px;
+    left: 50%;
+     transform: translateX(-50%);
+  z-index: 2;
+  top: -100px;
+  }
+  .DegraderBox {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 300px;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0.7),
+    rgba(0, 0, 0, 1));
+  z-index: -1;
+}
+
+.NewsTitle {
+  position: absolute;
+  bottom: 60px;
+  left: 40px;
+  color: rgb(255, 255, 255);
+  z-index: 2;
+  top: 550px ;
+}
+
+  .NewsSection {
+  position: relative;
+  background: white;
+  padding-top: -100px !important;
+  z-index: 3;
+  top: -100px;
+}
+
+
+  .NewsBox {
+    flex-direction: column;
+    align-items: center;
+    gap: 30px; 
+  }
+
+  .NewsBox img {
+    width: 90%;
+    max-width: 350px;
+  }
+  .NewsBox figure {
+  width: 350px !important;
+  text-align: center !important;
+}
+.NewsBox figcaption {
+  width: 1!important;
+  margin-top: 10px !important;
+  word-wrap: break-word !important;
+}
+
+  footer {
+    display: flex;
+    flex-wrap: wrap;
+    height: auto !important;
+    padding: 20px;
+    text-align: center ;
+    align-items: center;
+    
+  }
+
+
+
+  footer img {
+    padding-right: 30px !important;
+    margin-top: 170px; 
+    margin-bottom: 10px !important; 
+    align-self: center;
+  }
+
+  .FooterBox {
+    display: flex !important;
+    font-size: 20px !important;
+    text-align: center !important;
+    margin-bottom: 100px;
+    width: 400px !important;
+    font-size: 11px !important;
+    border-left: 0px !important;
+      word-wrap: break-word !important;
+       padding-right: 80px !important;
+  }
+}
+
+/*------------------Fin du responsive-----------------------------------*/
+
 header{
     background-color: rgb(175,30,45);
-    height: 70px;
     width: 100%;
     background-size: cover;
     margin: 0;
@@ -8,14 +168,21 @@ header{
     border-bottom: 5px black solid;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     position: fixed;
    overflow: hidden;
-   z-index: 999;
+   z-index: 998;
 
 }
-
+.Logo{
+  width:70px;
+   height:50px;
+ margin-left: 40px;
+}
+.canadientitel{
+  font-size: 30px;position: relative; ;color: white;font-weight:900 ;
+}
 main{
   padding-top: 90px;
 }
@@ -130,7 +297,6 @@ body{
 }
 .NewsBox{
   display: flex;
-
   justify-content: space-evenly;
 
 }
@@ -201,12 +367,23 @@ footer{
   display: flex;
   justify-content: space-evenly;
   padding-bottom: 100px;
+  position: relative;
 }
+.NewsBox figure {
+  width: 500px;
+  text-align: center;
+}
+.NewsBox figcaption {
+  width: 100%;
+  margin-top: 10px;
+  word-wrap: break-word;
+}
+
 .LogoDegrader{
   position: absolute;
   bottom: 12px;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-100%);
   z-index: 2;
 }
 
@@ -222,17 +399,212 @@ footer{
   padding-top: 10px;
   position: absolute;
 }
-
 .EquipeStyle{
   margin-left: 150px;
 }
+
 .Formation h1{
 font-size: 40px;
 font-weight: 900;
 padding-top: 10px;
 }
 .Formation hr{
+  margin-top: -30px;
   width: 200px;
-  
+  margin-left: 0px;
+  padding-left: 100px;
   border: 2px solid rgb(0, 0, 0);
+  margin-bottom: 60px;
+}
+.attaquants{
+    margin-top: -20px;
+  width: 150px;
+  margin-left: 0px;
+  padding-left: 100px;
+  border: 1px solid rgb(0, 0, 0);
+  margin-bottom: 40px;
+}
+.defenseurs h2{
+  font-size: 40px;
+  margin-top: 80px;
+}
+.defenseurs hr{
+    margin-top: -30px;
+  width: 300px;
+  margin-left: 0px;
+  padding-left: 100px;
+  border: 1px solid rgb(0, 0, 0);
+  margin-bottom: 40px;
+}
+.player{
+  display: grid;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+      grid-template-columns: repeat(4, 1fr);
+  margin-right: 100px;
+  gap: 50px;
+  margin-bottom: 100px;
+}
+.coupe h1{
+font-size: 40px;
+font-weight: 900;
+padding-top: 10px;
+margin-left: 10pc;
+}
+.coupe hr{
+  margin-top: -20px;
+  width: 400px;
+  margin-left: 0px;
+  padding-left: 100px;
+  border: 2px solid rgb(0, 0, 0);
+  margin-bottom: 60px;
+  margin-left: 10pc;
+}
+.tropheestyle{
+    display: grid;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+      grid-template-columns: repeat(4, 1fr);
+  margin-right: 100px;
+  gap: 50px;
+  margin-bottom: 100px;
+    margin-left: 150px;
+}
+.coupeBox{
+    display: flex;
+  height: 400px;
+  width: 300px;
+  border: 2px black solid;
+     flex-direction: column;
+    background: linear-gradient(to bottom, rgb(175,30,45),
+    rgba(207, 207, 207, 0.1));
+    text-align: center;
+    align-items: center;
+}
+.photocoupe{
+  position: absolute;
+  z-index: 3;
+}
+.logocoupe{
+  position: absolute;
+
+  opacity: 0.4;
+  z-index: 2;
+}
+.coupeBox img{
+  justify-self: center ;
+  width: 200px;
+  height: 360px;
+  margin-top: 10px;
+}
+.annerBox p{
+  display: flex;
+  width: 300px;
+  height: 20px;
+   text-align: center;
+   justify-content: center;
+   padding-top: 10px;
+   font-size: 20px;
+   font-weight: 999;
+   border-top: 2px black solid;
+}
+/*--------------------------------------------------------------------------------------------------------*/
+.playerBox{
+  display: flex;
+  height: 400px;
+  width: 300px;
+  border: 2px black solid;
+  justify-content: center;
+    background: linear-gradient(to bottom, rgb(175,30,45),
+    rgba(207, 207, 207, 0.1));
+    text-align: center;
+
+  z-index: 2;
+}
+
+.playerBox hr{
+  margin-top: 130px;
+  height: 0;
+  width: 250px;
+  border: 1px black solid;
+  z-index: 3;
+  position: absolute;
+}
+.playerimage{
+  margin-left: 100px;
+  margin-top: 10px;
+  height: 100px;
+  width: 100px;
+  border: 2px #121212 solid ;
+  border-radius: 100px;
+  background: linear-gradient(to bottom, rgb(175,30,45),
+    rgba(255, 255, 255, 0.671));
+    z-index: 4;
+    position: absolute;
+    gap: 10px;
+    
+}
+
+.number{
+  margin-right: 160px;
+  margin-top: 60px;
+  font-size: 40px;
+  font-weight: 999;
+  position: absolute;
+}
+
+.caracteristique{
+  margin-top: 140px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.name{
+    display: flex;
+  font-size: 20px;
+  font-weight: 999;
+  position: relative;
+  border-bottom: 3px black solid;
+  
+}
+.Pos{
+  display: flex;
+  font-size: 15px;
+  font-weight: 999;
+  position: relative
+}
+.Lance{
+   display: flex;
+  font-size: 15px;
+  font-weight: 999;
+  position: relative
+}
+.Taille{
+  display: flex;
+  font-size: 15px;
+  font-weight: 999;
+   position: relative
+}
+.Poids{
+  display: flex;
+  font-size: 15px;
+  font-weight: 999;
+  position: relative
+}
+.naissance{
+  display: flex;
+  font-size: 15px;
+  font-weight: 999;
+    position: relative
+}
+.lieuxnaissance{
+   display: flex;
+  font-size: 15px;
+  font-weight: 999;
+  position: relative
 }
