--- a/stylepage.css
+++ b/stylepage.css
@@ -310,6 +310,10 @@ footer{
     position: relative;
    z-index: 999;
 }
+footer img{
+  width:100px; 
+  padding-right: 1250px;
+}
 .VideoBox {
   position: relative;
   height: 100vh;
@@ -452,56 +456,115 @@ font-weight: 900;
 padding-top: 10px;
 margin-left: 10pc;
 }
+.coupe p{
+font-size: 30px;
+font-weight: 300;
+margin-left: 10pc;
+margin-top: 0;
+}
 .coupe hr{
   margin-top: -20px;
-  width: 400px;
+  width: 800px;
   margin-left: 0px;
   padding-left: 100px;
   border: 2px solid rgb(0, 0, 0);
-  margin-bottom: 60px;
   margin-left: 10pc;
 }
+.resumer{
+text-align: center;
+justify-self: center;
+}
+.resumer h1{
+font-size: 80px;
+font-weight: 900;
+padding-top: 10px;
+margin-left: 10pc;
+}
+.resumer p{
+font-size: 30px;
+font-weight: 300;
+margin-left: 0;
+
+}
+.resumer hr{
+    margin-top: -20px;
+  width: 2000px;
+  margin-left: 300px;
+  padding-left: 100px;
+  border: 4px solid rgb(0, 0, 0);
+}
+
 .tropheestyle{
     display: grid;
-  flex-wrap: wrap;
-  flex-direction: row;
   justify-content: space-between;
-      grid-template-columns: repeat(4, 1fr);
+  justify-content: center;
+  align-content: center;
+      grid-template-columns: repeat(8, 1fr);
   margin-right: 100px;
-  gap: 50px;
+  gap: 5px;
   margin-bottom: 100px;
     margin-left: 150px;
+    text-align: center;
 }
 .coupeBox{
     display: flex;
-  height: 400px;
-  width: 300px;
+  height: 300px;
+  width: 200px;
   border: 2px black solid;
      flex-direction: column;
     background: linear-gradient(to bottom, rgb(175,30,45),
     rgba(207, 207, 207, 0.1));
     text-align: center;
-    align-items: center;
-}
-.photocoupe{
-  position: absolute;
-  z-index: 3;
-}
-.logocoupe{
-  position: absolute;
-
-  opacity: 0.4;
-  z-index: 2;
+    justify-content: end;
+    position: relative;
+    margin-top: 30px;
+   
 }
 .coupeBox img{
-  justify-self: center ;
-  width: 200px;
-  height: 360px;
-  margin-top: 10px;
-}
-.annerBox p{
   display: flex;
-  width: 300px;
+  align-self: center;
+}
+.photocoupe{
+  position: static;
+  width: 200px;
+  margin-top: 10px;
+  z-index: 3;
+  
+}
+.logocoupe{
+  bottom: 120px;
+  width: 200px;
+  opacity: 0.4;
+  z-index: 2;
+  position: absolute;
+  align-self: center;
+  
+}
+.joueurfond{
+
+  z-index: 2;
+  position: absolute;
+  align-self: center;
+}
+.nametrophee p{
+display: flex;
+top: 0px;
+width: 200px;
+text-align: center;
+font-size: 19px;
+font-weight: 999;
+position: absolute;
+   justify-content: center;
+   z-index: 5;
+}
+.annerBox {
+  display: flex;
+  height: 70px;
+  width: 200px;
+}
+
+.annerBox p{
+  width: 200px;
   height: 20px;
    text-align: center;
    justify-content: center;
@@ -509,8 +572,118 @@ margin-left: 10pc;
    font-size: 20px;
    font-weight: 999;
    border-top: 2px black solid;
+
 }
-/*--------------------------------------------------------------------------------------------------------*/
+.resumerBox{
+  display: flex;
+  height: auto;
+  width: 400px;
+     border-top: 2px rgb(0, 0, 0) solid;
+ justify-content: center;
+
+}
+.resumerBox p{
+    width: 400px;
+  height: 70px;
+   text-align: center;
+   justify-content: center;
+   padding-top: 10px;
+   font-size: 20px;
+   font-weight: 999;
+   word-break: break-all;
+
+}
+.awardplayer{
+    display: grid;
+  justify-content: space-between;
+  align-content: center;
+      grid-template-columns: repeat(5, 1fr);
+  margin-right: 100px;
+  gap: 5px;
+  margin-bottom: 100px;
+    margin-left: 150px;
+    text-align: center;
+}
+.nameresumer p{
+top: 0px;
+text-align: center;
+font-size: 20px;
+font-weight: 999;
+margin-left: 10px;
+position: absolute;
+   justify-content: center;
+   z-index: 5;
+   left: 10px;
+}
+.awarddisplay{
+    display: flex;
+  
+  height: fit-content;
+  width: 400px;
+  border: 2px rgb(0, 0, 0) solid;
+     flex-direction: column;
+    background: linear-gradient(to bottom, rgb(175,30,45),
+    rgba(207, 207, 207, 0.1));
+    text-align: center;
+    margin-top: 30px;
+    padding-bottom: 10px;
+   
+}
+.awardBox{
+    display: flex;
+  height: 300px;
+  width: 400px;
+     flex-direction: column;
+    background: linear-gradient(to bottom, rgb(175,30,45),
+    rgba(207, 207, 207, 0.1));
+    text-align: center;
+    justify-content: end;
+    align-items: center;
+    position: relative;
+}
+.awardBox img{
+  display: flex;
+  align-self: center;
+}
+.recordplayer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+  
+}
+.recordplayer hr{
+  margin-top: 30px;
+  border: 1px rgb(0, 0, 0) solid;
+  width: 400px;
+}
+.trophee{
+    display: flex;
+  font-size: 15px;
+  font-weight: 999;
+   align-items: center;
+   gap: 50px;
+}
+.dezoom{
+  zoom: 65%;
+}
+.histoire{
+  font-size: 20px;
+font-weight: 300;
+margin-left: 10pc;
+margin-top: 0;
+}
+.histoire hr{
+    margin-top: -20px;
+  width: 800px;
+  margin-left: 0px;
+  padding-left: 100px;
+  border: 2px solid rgb(0, 0, 0);
+  margin-left: 10pc;
+}
+
+/*---------------------------------------------Debut Equipe-----------------------------------------------------------*/
 .playerBox{
   display: flex;
   height: 400px;
@@ -608,3 +781,4 @@ margin-left: 10pc;
   font-weight: 999;
   position: relative
 }
+/*---------------------------------------------Fin Equipe-----------------------------------------------------------*/
